# cowsay

./: LICENSE  README.md  deploy.sh  pyproject.toml
src/cowsay/: __main__.py  impl.py
